Get username for activity component

--- a/ChoreBuddies.Frontend/Features/Dashboard/Dashboard.razor
+++ b/ChoreBuddies.Frontend/Features/Dashboard/Dashboard.razor
@@ -1,6 +1,5 @@
 ﻿@page "/dashboard"
 
-@using ChoreBuddies.Frontend.Features.User
 @using ChoreBuddies.Frontend.UI.Components.Chores
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Web
@@ -8,7 +7,6 @@
 @using Shared.Chores
 
 @inject IAuthService authService
-@inject IUserService userService
 @inject Chores.IChoresService choresService
 @inject NavigationManager _navigationManager
 
@@ -73,7 +71,7 @@
                     {
                         @foreach (var chore in _householdChores)
                         {
-                            <Activity _choreDto="@chore" _userName="@(await GetChoreUserName(chore))"/>
+                            <Activity _choreDto="@chore"/>
                         }
                     }
                 </MudStack>
@@ -124,14 +122,6 @@
             }
         }
         return householdChores;
-    }
-    private async Task<string?> GetChoreUserName(ChoreDto usersChore)
-    {
-        if(usersChore.UserId is not null && usersChore.UserId > 0)
-        {
-            return (await userService.GetUserByIdAsync((int)(usersChore.UserId)))?.UserName ?? String.Empty;
-        }
-        return String.Empty;
     }
     private void GoToLogin()
     {
