--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
@@ -29,7 +29,7 @@
 	private ChoreViewModel Model = new();
 	private PageMode CurrentMode = PageMode.Create;
 
-	private List<AppUserDto> AvailableUsers = new();
+	private List<AppUserMinimalDto> AvailableUsers = new();
 	private bool _isTypeLocked;
 	protected override async Task OnInitializedAsync()
 	{
