added from predefined chores in houshold setup

--- a/ChoreBuddies.Frontend/Features/Chores/ChoreForm.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreForm.razor
@@ -1,4 +1,4 @@
-﻿@using ChoreBuddies.Frontend.Features.Chores.ScheduledChores
+﻿@using ChoreBuddies.Frontend.Features.ScheduledChores
 @using ChoreBuddies.Frontend.Utilities
 @using Shared.Users
 <MudForm @ref="_form" @bind-IsValid="_isValid">
