--- a/ChoreBuddies.Frontend/Features/ScheduledChores/SchedulingFields.razor
+++ b/ChoreBuddies.Frontend/Features/ScheduledChores/SchedulingFields.razor
@@ -1,4 +1,5 @@
 ﻿@using ChoreBuddies.Frontend.Utilities
+@using ChoreBuddies.Frontend.Features.Chores
 @using Shared.ScheduledChores
 @if (Model.IsScheduled)
 {
