fix main layout

--- a/ChoreBuddies.Frontend/Features/Household/HouseholdDetails.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdDetails.razor
@@ -1,5 +1,5 @@
 ﻿@page "/household/new"
-@page "/household-details/{HouseholdId:int}"
+@page "/household/details/{HouseholdId:int}"
 @using Shared.Households
 @using System.ComponentModel.DataAnnotations
 @using MudBlazor
