translate to english

--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
@@ -28,7 +28,7 @@
 			   StartIcon="@Icons.Material.Filled.ContentCopy"
 			   OnClick="OpenTemplateDialog"
 			   Class="mb-4">
-		Wybierz z szablonu
+		Select from predefined
 	</MudButton>
 }
 
