--- a/ChoreBuddies.Frontend/Features/PredefinedChores/PredefinedChoreDialog.razor
+++ b/ChoreBuddies.Frontend/Features/PredefinedChores/PredefinedChoreDialog.razor
@@ -30,7 +30,7 @@
         }
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">Anuluj</MudButton>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
     </DialogActions>
 </MudDialog>
 
