added userName to manage household scheduled chores list

--- a/ChoreBuddies.Frontend/Features/Household/HouseholdMembersManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdMembersManagement.razor
@@ -1,5 +1,4 @@
-﻿@using ChoreBuddies.Frontend.Features.ScheduledChores
-@using ChoreBuddies.Frontend.Features.User
+﻿@using ChoreBuddies.Frontend.Features.User
 @using MudBlazor
 @using Shared.Users
 
