--- a/ChoreBuddies.Frontend/Features/ScheduledChores/ScheduledChoresManagement.razor
+++ b/ChoreBuddies.Frontend/Features/ScheduledChores/ScheduledChoresManagement.razor
@@ -1,5 +1,4 @@
-﻿@using ChoreBuddies.Frontend.Features.ScheduledChores
-@using ChoreBuddies.Frontend.Features.User
+﻿@using ChoreBuddies.Frontend.Features.User
 @using MudBlazor
 @using Shared.ScheduledChores
 @using Shared.Users
@@ -38,7 +37,7 @@
 
             <MudTd>@chore.Name</MudTd>
             <MudTd>@chore.Description</MudTd>
-            <MudTd>Assigned</MudTd>
+            <MudTd>@chore.UserName</MudTd>
 
             <MudTd>
                 <MudSelect T="Frequency"
@@ -87,7 +86,7 @@
         AvailableFrequencies = Enum.GetValues<Frequency>().ToList();
         _isChild = await authService.GetUserRoleAsync() == "Child";
 
-        Chores = (await scheduledChoresService.GetMyHouseholdChoresAsync())
+        Chores = (await scheduledChoresService.GetMyHouseholdChoresOverviewAsync())
                  ?.ToList() ?? [];
     }
     private async Task ChangeFrequency(int choreId, Frequency newFrequency)
