--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
@@ -5,6 +5,7 @@
 @using System.ComponentModel.DataAnnotations
 @using AutoMapper
 @using ChoreBuddies.Frontend.Features.PredefinedChores
+@using ChoreBuddies.Frontend.Features.Chores.ScheduledChores
 @using ChoreBuddies.Frontend.Features.ScheduledChores
 @using Shared.Chores
 @using Shared.DefalutChores
