--- a/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
@@ -4,9 +4,9 @@
 @using ChoreBuddies.Frontend.Features.User
 @using MudBlazor
 @using Shared.Households
+@using Shared.PredefinedChores
 @using Shared.RedeemedRewards
 @using Shared.Rewards
-@using Shared.ScheduledChores
 @using Shared.Users
 @inject IHouseholdService householdService
 @inject IRedeemedRewardsService redeemedRewardsService
