--- a/ChoreBuddies.Frontend/Features/ScheduledChores/SchedulingFields.razor
+++ b/ChoreBuddies.Frontend/Features/ScheduledChores/SchedulingFields.razor
@@ -1,6 +1,6 @@
-﻿@using ChoreBuddies.Frontend.Utilities
-@using ChoreBuddies.Frontend.Features.Chores
-@using Shared.ScheduledChores
+﻿@using ChoreBuddies.Frontend.Features.Chores
+@using ChoreBuddies.Frontend.Utilities
+@using Shared.PredefinedChores
 @if (Model.IsScheduled)
 {
 	<div>
