--- a/ChoreBuddies.Frontend/Features/Household/HouseholdDetails.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdDetails.razor
@@ -123,7 +123,7 @@
             var result = await householdService.CreateHouseholdAsync(new CreateHouseholdDto(model.Name!, model.Description));
             if (result)
             {
-                navigationManager.NavigateTo("/setup-chores", forceLoad: true);
+                navigationManager.NavigateTo("/household/setup/chores", forceLoad: true);
             }
         }
         else if (CurrentMode == PageMode.Edit)
