--- a/ChoreBuddies.Frontend/Features/ScheduledChores/ScheduledChoresManagement.razor
+++ b/ChoreBuddies.Frontend/Features/ScheduledChores/ScheduledChoresManagement.razor
@@ -1,12 +1,14 @@
-﻿@using ChoreBuddies.Frontend.Features.User
+﻿@using ChoreBuddies.Frontend.Features.ScheduledChores
+@using ChoreBuddies.Frontend.Features.User
 @using MudBlazor
-@using Shared.ScheduledChores
+@using Shared.PredefinedChores
 @using Shared.Users
-
-@inject IScheduledChoresService scheduledChoresService
+e
 @inject ISnackbar snackbar
 @inject NavigationManager navigationManager
 @inject IAuthService authService
+@inject IScheduledChoresService scheduledChoresService
+
 <MudPaper Elevation="0" Class="pa-6 mb-8" Style="background:#f5f6f8; border-radius:16px;">
     <div>
         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Start" Class="mb-3">
