--- a/ChoreBuddies.Frontend/Features/PredefinedRewards/SelectPredefinedRewards.razor
+++ b/ChoreBuddies.Frontend/Features/PredefinedRewards/SelectPredefinedRewards.razor
@@ -27,7 +27,7 @@
                                 SelectedValuesChanged="@(values => OnSelectionChanged(values))">
                         @foreach (var reward in _allRewards)
                         {
-                            var groupColorHex = GetColorForRoom(reward.Name);
+                            var groupColorHex = GetColorForReward(reward.Name);
                             <MudChip T="PredefinedRewardDto"
                                      Value="@reward"
                                      Variant="Variant.Text"
@@ -101,7 +101,7 @@
         navManager.NavigateTo($"/household/manage");
     }
 
-    private string GetColorForRoom(string name)
+    private string GetColorForReward(string name)
     {
         if (string.IsNullOrEmpty(name)) return "#424242";
 
