--- a/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
+++ b/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
@@ -148,6 +148,8 @@
         if ((await redeemedRewardsService.RedeemRewardAsync(rewardId)) is not null)
         {
             Snackbar.Add("Redeemed successfully", Severity.Success);
+            RedeemedRewards = (await redeemedRewardsService.GetUsersRedeemedRewardsAsync()).OrderByDescending(r => r.Id).ToList();
+            StateHasChanged();
         }
         else
         {
